--- a/.MD
+++ b/.MD
@@ -1,7 +1,7 @@
-####To get started with platform enrollment, select the guide that best matches your scenario. Here's a summary of the available options:
+##### To get started with platform enrollment, select the guide that best matches your scenario. Here's a summary of the available options:
 
 Android: Instructions specific to enrolling Android devices.
 iOS/iPadOS: Steps to enroll Apple mobile devices.
 Linux: Enrollment guide for Linux-based systems.
 macOS: Process for enrolling Apple desktop and laptop devices.
-Windows: Guide for Windows device enrollment.
+Windows (https://example.com): Guide for Windows device enrollment.
