--- a/.MD
+++ b/.MD
@@ -4,4 +4,5 @@ Android: Instructions specific to enrolling Android devices.
 iOS/iPadOS: Steps to enroll Apple mobile devices.
 Linux: Enrollment guide for Linux-based systems.
 macOS: Process for enrolling Apple desktop and laptop devices.
-[Windows](https://example.com): Guide for Windows device enrollment.
+-  [Windows](https://example.com): Guide for Windows device enrollment.
+-  [macOS]: Process for enrolling Apple desktop and laptop devices.
