--- a/.MD
+++ b/.MD
@@ -4,5 +4,8 @@ Android: Instructions specific to enrolling Android devices.
 iOS/iPadOS: Steps to enroll Apple mobile devices.
 Linux: Enrollment guide for Linux-based systems.
 macOS: Process for enrolling Apple desktop and laptop devices.
--  [Windows](https://example.com): Guide for Windows device enrollment.
--  [macOS]: Process for enrolling Apple desktop and laptop devices.
+-  [Windows](https://github.com/shahin4s/Deployement/blob/main/Windows%20Autopilot%20Setup%20Guide.md): Guide for Windows device enrollment.
+-  [macOS](https://github.com/shahin4s/Deployement/blob/main/Enrolling%20macOS%20device%20to%20Intune%20MDM.MD): Process for enrolling Apple desktop and laptop devices.
+-  iOS/iPadOS: Steps to enroll Apple mobile devices.
+-  Android: Instructions specific to enrolling Android devices.
+-  Linux: Enrollment guide for Linux-based systems.
